# nAMRbourhood

./: .gitignore  README.md  pyproject.toml
nAMRbourhood/: __init__.py  cli.py  gbk.py  nAMRbourhood.py  utils.py
namrbourhood/: .all-contributorsrc  README.md
tests/: test_gbk.py
tests/test_data/: one_locus.gbk
